[gd_scene load_steps=31 format=2]

[ext_resource path="res://art/character/codemon/char.png" type="Texture" id=1]
[ext_resource path="res://scene/character/codemons/codemon.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.5
height = 0.0

[sub_resource type="Animation" id=2]
resource_name = "idle_left"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("sprite:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("sprite:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, -2.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle_right"
length = 0.8
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("sprite:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, -0.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("sprite:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, -6, -0.25, 0, 0.25, 0, -2.5, -0.25, 0, 0.25, 0, 2.5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk_left"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -15, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sprite:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("sprite:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("sprite:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("sprite:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, -4, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0, 2.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -15, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("sprite:scale:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("sprite:scale:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0.8, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0.8, -0.25, 0, 0.25, 0, 0.6, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("sprite:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("sprite:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, -4, -0.25, 0, 0.25, 0, -2, -0.25, 0, 0.25, 0, 2.8, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.7, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("sprite:flip_h")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "idle_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 10 )
blend_point_4/pos = Vector2( -1, 1 )
blend_point_5/node = SubResource( 11 )
blend_point_5/pos = Vector2( -1, -1 )
blend_point_6/node = SubResource( 12 )
blend_point_6/pos = Vector2( 1, 1 )
blend_point_7/node = SubResource( 13 )
blend_point_7/pos = Vector2( 1, -1 )
max_space = Vector2( 1, 1.01 )

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk_left"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk_right"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "walk_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=23]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 1, 0 )
blend_point_4/node = SubResource( 19 )
blend_point_4/pos = Vector2( -1, 1 )
blend_point_5/node = SubResource( 20 )
blend_point_5/pos = Vector2( -1, -1 )
blend_point_6/node = SubResource( 21 )
blend_point_6/pos = Vector2( 1, 0.9 )
blend_point_7/node = SubResource( 22 )
blend_point_7/pos = Vector2( 1, -1 )

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachine" id=26]
states/idle/node = SubResource( 14 )
states/idle/position = Vector2( 277, 116 )
states/walk/node = SubResource( 23 )
states/walk/position = Vector2( 462, 116 )
transitions = [ "idle", "walk", SubResource( 24 ), "walk", "idle", SubResource( 25 ) ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=27]

[sub_resource type="CircleShape2D" id=28]
radius = 61.3346

[node name="charr" type="KinematicBody2D" groups=[
"codemon",
"variable",
]]
position = Vector2( 412, 285 )
scale = Vector2( 2, 2 )
collision_layer = 2147483650
collision_mask = 63
script = ExtResource( 2 )
codemon = "Char"

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -0.00191774, -0.0191774 )
scale = Vector2( 1, 1.00077 )
texture = ExtResource( 1 )
flip_h = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 8 )
shape = SubResource( 1 )

[node name="animation" type="AnimationPlayer" parent="."]
anims/idle_left = SubResource( 2 )
anims/idle_right = SubResource( 3 )
anims/walk_left = SubResource( 4 )
anims/walk_right = SubResource( 5 )

[node name="animation_tree" type="AnimationTree" parent="."]
tree_root = SubResource( 26 )
anim_player = NodePath("../animation")
active = true
parameters/playback = SubResource( 27 )
parameters/idle/blend_position = Vector2( 0, 0 )
parameters/walk/blend_position = Vector2( 0, 0 )

[node name="chalenge" type="Area2D" parent="."]
position = Vector2( 141.271, 84.9305 )
scale = Vector2( 0.749307, -0.762249 )
collision_layer = 0

[node name="area" type="CollisionShape2D" parent="chalenge"]
position = Vector2( -188.535, 111.421 )
shape = SubResource( 28 )
[connection signal="body_entered" from="chalenge" to="." method="_on_chalenge_body_entered"]
[connection signal="body_exited" from="chalenge" to="." method="_on_chalenge_body_exited"]
